[gd_scene load_steps=12 format=3 uid="uid://d0jtw05w3xofs"]

[ext_resource type="Script" uid="uid://bswn0csmelkug" path="res://menu/menu_root.gd" id="1_c4kem"]
[ext_resource type="PackedScene" uid="uid://blyh8cra8at8w" path="res://menu/main_menu/main_menu.tscn" id="3_qvmb4"]
[ext_resource type="PackedScene" uid="uid://dmmyv728c85ag" path="res://menu/character_select/character_select.tscn" id="4_kdtid"]
[ext_resource type="Script" uid="uid://b2sycb0fk37xf" path="res://characters/player/script/character_info.gd" id="4_mvocj"]
[ext_resource type="PackedScene" uid="uid://c4bc6xi5hptg4" path="res://menu/level_select/level_select.tscn" id="5_i8pwd"]
[ext_resource type="Resource" uid="uid://ph72dst7pq8j" path="res://characters/player/character_infos/yellow.tres" id="5_wmwb7"]
[ext_resource type="PackedScene" uid="uid://n26qjgtu4ldm" path="res://menu/options_menu/options_menu.tscn" id="6_mvocj"]
[ext_resource type="Resource" uid="uid://cuhkjxbnomxxg" path="res://characters/player/character_infos/blue.tres" id="6_whfxe"]
[ext_resource type="PackedScene" uid="uid://x3e8modtr7fy" path="res://menu/pause_menu/pause_menu.tscn" id="7_wmwb7"]
[ext_resource type="PackedScene" uid="uid://qfmimc27lm15" path="res://menu/game_over_menu/game_over_menu.tscn" id="8_whfxe"]
[ext_resource type="PackedScene" uid="uid://cv8fwsrr1gglv" path="res://menu/level_up_menu/level_up_menu.tscn" id="9_kdtid"]

[node name="MenuRoot" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_c4kem")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" parent="." instance=ExtResource("3_qvmb4")]
visible = false

[node name="CharacterSelectMenu" parent="." instance=ExtResource("4_kdtid")]
visible = false
characters_infos = Array[ExtResource("4_mvocj")]([ExtResource("5_wmwb7"), ExtResource("6_whfxe")])

[node name="LevelSelectMenu" parent="." instance=ExtResource("5_i8pwd")]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource("6_mvocj")]
visible = false

[node name="GameOverMenu" parent="." instance=ExtResource("8_whfxe")]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource("7_wmwb7")]
visible = false

[node name="LevelUpMenu" parent="." instance=ExtResource("9_kdtid")]
visible = false

[connection signal="main_menu_pressed" from="PauseMenu" to="." method="_on_pause_menu_main_menu_pressed"]
[connection signal="resume_pressed" from="PauseMenu" to="." method="_on_pause_menu_resume_pressed"]
[connection signal="upgrade_selected" from="LevelUpMenu" to="." method="_on_level_up_menu_upgrade_selected"]
